# cryptics_lab_bot_v99

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  GITHUB_SECRETS_SETUP.md  README.md  config.toml  pytest.ini
python_pipeline/: .coverage  README.md  pyproject.toml  requirements.txt  setup.py
python_pipeline/src/python_pipeline/: __init__.py  cleanup.py  factories.py  main.py
python_pipeline/src/python_pipeline/config/: __init__.py  settings.py
python_pipeline/src/python_pipeline/consumers/: __init__.py  ack_sink_connector.py  base_sink_connector.py  index_sink_connector.py  order_sink_connector.py  ticker_sink_connector.py  trade_sink_connector.py
python_pipeline/src/python_pipeline/data_generators/: __init__.py  ack_generator.py  base_generator.py  factory.py  index_generator.py  ticker_generator.py  trade_generator.py
python_pipeline/src/python_pipeline/models/: __init__.py  ack.py  index.py  model_base.py  order.py  ticker.py  trade.py
python_pipeline/src/python_pipeline/producers/: __init__.py  ack_producer.py  avro_schema_loader.py  base_producer.py  dead_letter_producer.py  dlq_enabled_producer.py  index_producer.py  order_producer.py  schema_generator.py  ticker_producer.py  trade_producer.py
python_pipeline/src/python_pipeline/services/: __init__.py  config_service.py  connector_service.py  database_service.py  kafka_service.py  migration_manager.py  pipeline_orchestrator.py  producer_service.py
python_pipeline/src/python_pipeline/utils/: __init__.py  avro_utils.py  connection_utils.py  health_check.py
python_pipeline/tests/: MIGRATION_TESTS_README.md  README.md  __init__.py  base_test.py  conftest.py  create_test_db.py  run_all_tests.sh  run_migration_tests.sh  run_tests.py  setup_test_db.py  test_ack_generate.py.bak  test_ack_generator.py  test_ack_serialization.py  test_integration.py  test_migration_manager.py  test_producer_logic.py  test_pydantic_config.py  test_schema_migration.py  test_ticker_serialization.py  test_trade_serialization.py
python_pipeline/tests/integration/: test_kafka_to_db.py
python_pipeline/tests/unit/data_generators/: __init__.py  test_ack_generator.py  test_index_generator.py  test_ticker_generator.py  (+1 more)
rust_tradingengine/: Cargo.toml
rust_tradingengine/src/: config_loader.rs  config_old.rs  lib.rs  main.rs
rust_tradingengine/src/domain/: constants.rs  enums.rs  events.rs  mod.rs  traits.rs  traits.rs.deleted
rust_tradingengine/src/examples/: schema_example.rs
rust_tradingengine/src/infrastructure/: mod.rs
rust_tradingengine/src/strategies/: mod.rs
rust_tradingengine/tests/: README.md  lib.rs
rust_tradingengine/tests/infrastructure/: mod.rs
(+69 files in other folders)
