[package]
name = "cryptics_lab_bot"
version = "0.1.0"
edition = "2021"
default-run = "cryptics_lab_bot"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# WebSocket
tungstenite = "0.20"
url = "2.5"
jsonwebtoken = "8.3"

# Kafka 
rdkafka = { version = "0.36", default-features = false, features = ["tokio"] }
schema_registry_converter = { version = "4.4.0", features = ["avro"] }
# Changed this back to 0.18 for compatibility with schema_registry_converter
apache-avro = "0.18"


# Time handling
chrono = "0.4"

# Other utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
dotenv = "0.15"
env_logger = "0.11"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }